tests/fixtures/invalid/unknown_attribute.gcl
// Error: unknown attribute name
#[foobar]
param x: Dimensionless = 1.0;
